--- a/eightqueen3D.vcxproj
+++ b/eightqueen3D.vcxproj
@@ -161,6 +161,8 @@
     <ClCompile Include="getPattern.cpp" />
     <ClCompile Include="initBoard.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mouse.cpp" />
+    <ClCompile Include="search.cpp" />
     <ClCompile Include="setPattern.cpp" />
   </ItemGroup>
   <ItemGroup>
