--- a/eightqueen3D.vcxproj.filters
+++ b/eightqueen3D.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="setPattern.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="mouse.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="search.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
